# goit-data-hw-03

./: .gitignore  README.md  pyproject.toml
test_spyders/: scrapy.cfg
test_spyders/test_spyders/: items.py  middlewares.py  pipelines.py  settings.py
test_spyders/test_spyders/spiders/: authors.py  quotes.py
