[tool.poetry]
name = "goit-data-hw-03"
version = "0.1.0"
description = ""
authors = ["Yurii Budynkevych <yurii.budynkevych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.1"
pymongo = "^4.6.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
